// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Loader > Spinner.vue > renders OXD Spinner 1`] = `
"<div data-v-a498e0da="" class="oxd-loading-spinner-container">
  <div data-v-a498e0da="" class="oxd-loading-spinner"></div>
</div>"
`;

exports[`Loader > Spinner.vue > should renders OXD Spinner with container 1`] = `
"<div data-v-a498e0da="" class="oxd-loading-spinner-container--block">
  <div data-v-a498e0da="" class="oxd-loading-spinner"></div>
</div>"
`;
